[project]
name = "art-interleaved"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "modal>=1.3.0.post1",
    "nest-asyncio>=1.6.0",
    "openai>=2.14.0",
    "openpipe-art>=0.5.4",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
    "setproctitle>=1.3.7",
    "tblib>=3.2.2",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
