[project]
name = "web-research-grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peft>=0.14.0",
    "hf-xet>=1.1.0",
    "bitsandbytes>=0.45.2",
    "unsloth==2025.10.3",
    "unsloth-zoo==2025.10.3",
    "vllm>=0.9.2,<=0.10.0",
    "torchtune",
    "trl>=0.19.0",
    "torch>=2.7.0",
    "torchao>=0.9.0",
    "accelerate==1.7.0",
    "awscli>=1.38.1",
    "setproctitle>=1.3.6",
    "tblib>=3.0.0",
    "setuptools>=78.1.0",
    "wandb==0.22.1",
    "polars>=1.26.0",
    "transformers==4.53.2",
    "trl==0.20.0",
    "nbclient>=0.10.1",
    "pytest>=8.4.1",
    "nbmake>=1.5.5",
    "gql<4",
]
